--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
 
 </head>
 <body>
-    <h1 id="title"></h1>
-    <p id="description">
+<form action="" method="">
+    <lable for='name'>first name</lable>
+    <input type="text" name="name" id="">
+    <br>
+    <p>Password</p>
+    <input type="password" placeholder="password" <br>
+    <input type="email" name="" id="" value="xyz@gmail.com">
+    <br>
+    <p>Description</p>
+    <textarea name="" id="" cols="20" rows="10"> </textarea>
+    <br>
+    <p>Please select your favourite Dog?</p>
+    <input type="radio" name="" id="">Labra
+    <input type="radio" name="" id="">Bulldog
+    <input type="radio" name="" id="">Pomilion
+    <br>
+    <p>Please select your favourite Animal?</p>
+    <input type="checkbox" value="Animal" name="Animal" id="">
+    <input type="checkbox" value="" name="Animal" id="">
+    <input type="checkbox" value="Animal" name="" id="">
+    <br>
+    <p>Please select your favourite Animal?</p>
+    <select name="languages" id="">
+        <option value="javascript"></option>
+        <option value="javascript"></option>
+        <option value="javascript"></option>
+    </select>
+    <br>
+    <input type="submit" value="submit please">
+</form>
 
-    </p>
-    <div class="container">
-        <form action="" class="survey-form">
-            <label for=""></label> <input type="text" id="name" required>
-            <label for=""></label> <input type="email" name="" id="email" required>
-            <input type="number" maxlength="8" minlength="3">
-
-        </form>
-    </div>
-    
 </body>
 </html>
