finishing the project

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 
             </div>
             <div class="form-control">
-                <label for="">Which option best describes your current role?</label><input required type="text">
-            </div>
-            <div class="form-control">
                 <p>What is your favorite feature of freeCodeCamp?</p>
                 <select name="" id="dropdown">
                     <option value="">All</option>
@@ -41,9 +38,9 @@
             <div class="form-radio">
                 <p>What would you like to see improved? (Check all that apply)</p>
                 <input type="radio" id="male" name="gender" value="male">
-                <label for="male">Male</label><br>
+                <label for="male">Green</label><br>
                 <input type="radio" id="female" name="gender" value="female">
-                <label for="female">Female</label><br>
+                <label for="female">Chocalat</label><br>
                 <input type="radio" id="other" name="gender" value="other">
                 <label for="other">Other</label>
             </div>
